--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,8 @@ description: > # this means to ignore newlines until "baseurl:"
 show_excerpts: true # set to false to remove excerpts on the homepage
 
 theme: minima
+
+---
+title: "Learning How to Use Pages"
+date: 2022-05-04
+---
